[FEATURE] Remove deprecated http methods, fix download